--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   height: 40vmin;
 }
 
+.table {
+  text-align: left;
+  justify-content: none;
+}
+
 .App-header {
   background-color: #8f96a3;
   min-height: 8%;
@@ -43,27 +48,26 @@
 }
 
 .Flex-Wrap {
-  flex-wrap: wrap
+  flex-wrap: wrap;
 }
-
 
 .Title {
   display: flex;
-  width:50vw;
+  width: 50vw;
   height: 80%;
   flex-direction: column;
   /* background-color: darkgray; */
   font-size: 15px;
   align-self: center;
   justify-content: center;
-  margin-bottom: 3%
+  margin-bottom: 3%;
 }
 
 .Row {
   flex-direction: row;
   display: flex;
-  height: 'auto';
-  width: 'auto'
+  height: "auto";
+  width: "auto";
 }
 
 .Column {
@@ -102,8 +106,8 @@
 }
 
 .Height-20 {
-  display:flex;
-  height:20%;
+  display: flex;
+  height: 20%;
 }
 
 .Width-50 {
@@ -135,10 +139,10 @@
   align-self: center;
   display: flex;
 }
+
 .Margin-top {
   margin-top: 10%;
 }
-
 
 h1 {
   justify-content: center;
@@ -161,28 +165,26 @@ h1 {
   padding: 1px 7px 2px;
 }
 
-
 .White {
-  color:white;
+  color: white;
   /* text-decoration: underline; */
 }
 
 .Grey {
-  color: rgb(92, 92, 92)
+  color: rgb(92, 92, 92);
 }
 
 .Lightgrey {
-  background-color: rgb(220, 220, 220)
+  background-color: rgb(220, 220, 220);
 }
 
 .Black {
-  color: black
+  color: black;
 }
 
 .Lighter-blue {
   background-color: rgb(181, 228, 228);
 }
-
 
 @keyframes App-logo-spin {
   from {
