--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,7 @@
 .Height-80 {
   display: flex;
   height: 20%;
+  min-height: 75px;
   width: 60%;
   margin-top: 15%;
 }
@@ -94,6 +95,10 @@
   display: flex;
   height: 75%;
   margin-top: 5%;
+}
+
+.Height-50 {
+  min-height: 40px
 }
 
 .Height-40 {
@@ -116,6 +121,7 @@
 .Width-75 {
   width: 60rem;
   min-width: 30rem;
+  min-height: 50rem;
   border-radius: 10%;
   background-color: rgb(181, 228, 228);
   margin-bottom: 3%;
@@ -128,6 +134,8 @@
 
 .Margin-top {
   margin-top: 25%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .Flex-End {
