--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: “Roboto”, sans-serif;
 }
 
 .App-logo {
@@ -25,7 +26,7 @@
 .App-body {
   display: flex;
   justify-content: center;
-  background-color: rgb(17, 17, 41);
+  background-color: rgb(41, 17, 17);
   height: 100vh;
   /* opacity: .2; */
   z-index: -2;
@@ -43,27 +44,26 @@
 }
 
 .Flex-Wrap {
-  flex-wrap: wrap
+  flex-wrap: wrap;
 }
-
 
 .Title {
   display: flex;
-  width:50vw;
+  width: 50vw;
   height: 80%;
   flex-direction: column;
   /* background-color: darkgray; */
   font-size: 15px;
   align-self: center;
   justify-content: center;
-  margin-bottom: 3%
+  margin-bottom: 3%;
 }
 
 .Row {
   flex-direction: row;
   display: flex;
-  height: 'auto';
-  width: 'auto'
+  height: "auto";
+  width: "auto";
 }
 
 .Column {
@@ -79,8 +79,21 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 2%;
-  min-height: 85px;
+  min-height: 5rem;
+  /* margin-top: 1rem; */
+}
+
+.min-Height-8 {
+  min-height: 8rem;
+}
+
+
+.Height-22 {
+  display: flex;
+  height: 20%;
+  min-height: 30rem;
+  width: 60%;
+  margin-top: 15%;
 }
 
 .Height-80 {
@@ -98,7 +111,7 @@
 }
 
 .Height-50 {
-  min-height: 40px
+  min-height: 40px;
 }
 
 .Height-40 {
@@ -107,8 +120,8 @@
 }
 
 .Height-20 {
-  display:flex;
-  height:20%;
+  display: flex;
+  height: 20%;
 }
 
 .Width-50 {
@@ -118,6 +131,11 @@
   background-color: rgb(181, 228, 228);
 }
 
+
+.Width-100 {
+  width: 100%;
+}
+
 .Width-75 {
   width: 60rem;
   min-width: 30rem;
@@ -125,6 +143,14 @@
   border-radius: 10%;
   background-color: rgb(181, 228, 228);
   margin-bottom: 3%;
+}
+
+.Width-60 {
+  width: 60rem;
+}
+
+.Width-30 {
+  width: 45rem
 }
 
 .Table-box {
@@ -145,9 +171,20 @@
 }
 
 .Margin-top-10 {
-  margin-top: 4%;
+  margin-top: 1%;
 }
 
+.Margin-top-5 {
+  margin-top: 5%
+}
+
+.Margin-top-3 {
+  margin-top: 3%;
+}
+
+.Margin-top-1 {
+  margin-top: 1%;
+}
 
 h1 {
   justify-content: center;
@@ -170,28 +207,50 @@ h1 {
   padding: 1px 7px 2px;
 }
 
+.SelectAll-Button {
+  align-items: center;
+  text-align: center;
+  text-decoration: none;
+  cursor: default;
+  box-sizing: border-box;
+  border: 2px;
+  height: 40px;
+  font-size: 20px;
+  opacity: 0.5;
+  border-radius: 15%;
+  margin: 3px;
+  padding: 1px 7px 2px;
+}
 
 .White {
-  color:white;
+  color: white;
   /* text-decoration: underline; */
 }
 
+.Light-green {
+  background-color:rgb(181, 228, 228)
+}
+
 .Grey {
-  color: rgb(92, 92, 92)
+  color: rgb(92, 92, 92);
 }
 
 .Lightgrey {
-  background-color: rgb(220, 220, 220)
+  background-color: rgb(220, 220, 220);
+  color: white
+}
+
+.Dark-blue {
+  background-color: rgb(41, 17, 17);
 }
 
 .Black {
-  color: black
+  color: black;
 }
 
 .Lighter-blue {
   background-color: rgb(181, 228, 228);
 }
-
 
 @keyframes App-logo-spin {
   from {
@@ -200,4 +259,34 @@ h1 {
   to {
     transform: rotate(360deg);
   }
+}
+
+.Margin-buttons {
+  margin-top: 1rem;
+  padding: .5rem;
+}
+
+
+
+.Flex-start {
+  justify-content: flex-start;
+}
+
+.Display {
+  display: flex
+}
+
+.Align-self-end {
+  align-self: flex-end
+}
+
+.Align-self-center {
+  align-self: center
+}
+
+
+
+.Padding-3 {
+  padding: 1%;
+  margin-bottom: 3%
 }
