--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,6 @@ table {
   text-align: left;
   justify-content: none;
   font-family: "Roboto", sans-serif;
-  /* border-collapse: separate;
-  background-color: grey; */
-  /* width: 90%; */
 }
 
 .table tbody {
@@ -45,7 +42,6 @@ table {
   justify-content: center;
   background-color: rgb(19, 19, 50);
   height: 100vh;
-  /* opacity: .2; */
   z-index: -2;
 }
 
@@ -69,7 +65,6 @@ table {
   width: 50vw;
   height: 80%;
   flex-direction: column;
-  /* background-color: darkgray; */
   font-size: 15px;
   align-self: center;
   justify-content: center;
@@ -97,28 +92,6 @@ table {
   flex-direction: row;
   justify-content: center;
   min-height: 5rem;
-  /* margin-top: 1rem; */
-}
-
-.min-Height-8 {
-  min-height: 8rem;
-}
-
-
-.Height-22 {
-  display: flex;
-  height: 20%;
-  min-height: 30rem;
-  width: 60%;
-  margin-top: 15%;
-}
-
-.Height-80 {
-  display: flex;
-  height: 20%;
-  min-height: 75px;
-  width: 60%;
-  margin-top: 15%;
 }
 
 .Height-75 {
@@ -128,7 +101,7 @@ table {
 }
 
 .Height-50 {
-  min-height: 40px;
+  min-height: 50px;
 }
 
 .Height-40 {
@@ -141,34 +114,57 @@ table {
   height: 20%;
 }
 
-.Width-50 {
-  width: 50%;
-  max-width: 30rem;
-  min-width: 18rem;
-  border-radius: 10%;
-  background-color: rgb(181, 228, 228);
+.Min-height-75 {
+  min-height: 75px;
+  display: flex;
+  height: 20%;
+  width: 60%;
+  margin-top: 15%;
 }
 
+.Min-height-30 {
+  min-height: 30rem;
+  display: flex;
+  height: 40%;
+  width: 60%;
+  margin-top: 15%;
+}
+
+.min-Height-8 {
+  min-height: 8rem;
+}
 
 .Width-100 {
   width: 100%;
-}
-
-.Width-75 {
-  width: 60rem;
-  min-width: 30rem;
-  min-height: 50rem;
-  border-radius: 10%;
-  background-color: rgb(181, 228, 228);
-  margin-bottom: 3%;
 }
 
 .Width-60 {
   width: 60rem;
 }
 
+.Width-50 {
+  width: 50%;
+  max-width: 35rem;
+  min-width: 18rem;
+  border-radius: 10%;
+  background-color: rgb(181, 228, 228);
+}
+
 .Width-30 {
-  width: 45rem
+  width: 45rem;
+}
+
+.Width-5 {
+  width: 8rem;
+}
+
+.Min-width-30 {
+  min-width: 30rem;
+  width: 60rem;
+  min-height: 50rem;
+  border-radius: 10%;
+  background-color: rgb(181, 228, 228);
+  margin-bottom: 3%;
 }
 
 .Table-box {
@@ -188,12 +184,12 @@ table {
   display: flex;
 }
 
-.Margin-top-10 {
-  margin-top: 1%;
+.Max-height {
+  max-height: 1.5rem;
 }
 
 .Margin-top-5 {
-  margin-top: 5%
+  margin-top: 5%;
 }
 
 .Margin-top-3 {
@@ -219,7 +215,7 @@ h1 {
   border: 2px;
   height: 40px;
   font-size: 20px;
-  opacity: 0.5;
+  opacity: 0.6;
   border-radius: 15%;
   margin: 3px;
   padding: 1px 7px 2px;
@@ -245,8 +241,12 @@ h1 {
   /* text-decoration: underline; */
 }
 
+.Header-Color {
+  background-color: #8f96a3;
+}
+
 .Light-green {
-  background-color:rgb(181, 228, 228)
+  background-color: rgb(181, 228, 228);
 }
 
 .Grey {
@@ -255,7 +255,7 @@ h1 {
 
 .Lightgrey {
   background-color: rgb(220, 220, 220);
-  color: white
+  color: white;
 }
 
 .Dark-blue {
@@ -281,30 +281,55 @@ h1 {
 
 .Margin-buttons {
   margin-top: 1rem;
-  padding: .5rem;
+  padding: 0.5rem;
 }
 
-
+.Flex-space-around {
+  justify-content: space-between;
+  padding: 1%;
+  margin-left: 2%;
+  margin-right: 2%;
+}
 
 .Flex-start {
   justify-content: flex-start;
 }
 
 .Display {
-  display: flex
+  display: flex;
 }
 
 .Align-self-end {
-  align-self: flex-end
+  align-self: flex-end;
 }
 
 .Align-self-center {
-  align-self: center
+  align-self: center;
 }
 
+.Larger-font {
+  font-size: 1.25rem;
+  margin-bottom: 1%;
+  border-bottom: solid;
+  border-bottom-width: 1px;
+}
 
+.Smaller-font {
+  font-size: 1rem;
+}
 
 .Padding-3 {
   padding: 1%;
-  margin-bottom: 3%
+  margin-bottom: 3%;
+}
+
+.Input {
+  width: 22rem;
+  height: 1.75rem;
+  font-size: 14px;
+}
+
+.Checkbox {
+  height: 1rem;
+  width: 1rem;
 }
