--- a/src/App.css
+++ b/src/App.css
@@ -216,7 +216,7 @@ h1 {
   border: 2px;
   height: 40px;
   font-size: 20px;
-  opacity: 0.6;
+  opacity: 0.8;
   border-radius: 15%;
   margin: 3px;
   padding: 1px 7px 2px;
@@ -314,12 +314,12 @@ h1 {
   min-height: 1.75rem;
   border-bottom: solid;
   border-bottom-width: 1px;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
 }
 
 .Smaller-font {
   font-size: 1rem;
-  margin-left: .5rem
+  margin-left: 0.5rem;
 }
 
 .Padding-3 {
