--- a/src/App.css
+++ b/src/App.css
@@ -105,12 +105,12 @@ table {
 }
 
 .Height-40 {
-  display: flex;
+  /* display: flex; */
   height: 40%;
 }
 
 .Height-20 {
-  display: flex;
+  /* display: flex; */
   height: 20%;
 }
 
@@ -128,6 +128,18 @@ table {
   height: 40%;
   width: 60%;
   margin-top: 15%;
+}
+
+.Max-height {
+  max-height:7rem;
+}
+
+.Min-height-4 {
+  min-height:40%
+}
+
+.Min-height {
+  min-height: 15rem;
 }
 
 .min-Height-8 {
@@ -158,6 +170,10 @@ table {
   width: 8rem;
 }
 
+.Max-width {
+  max-width: 20rem;
+}
+
 .Min-width-30 {
   min-width: 30rem;
   width: 60rem;
@@ -165,6 +181,14 @@ table {
   border-radius: 10%;
   background-color: rgb(181, 228, 228);
   margin-bottom: 3%;
+}
+
+.Min-width {
+  min-width: 25rem;
+}
+
+.Min-width-5 {
+  min-width: 12rem;
 }
 
 .Table-box {
@@ -186,6 +210,16 @@ table {
 
 .Max-height {
   max-height: 1.5rem;
+}
+
+.Margin-top-15 {
+  margin-top: 15%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.Margin-top-10 {
+  margin-top:10%
 }
 
 .Margin-top-5 {
@@ -259,8 +293,10 @@ h1 {
 }
 
 .Dark-blue {
-  background-color: rgb(41, 17, 17);
+  color: rgb(19, 19, 50);
 }
+
+
 
 .Black {
   color: black;
@@ -335,4 +371,27 @@ h1 {
 .Checkbox {
   height: 1rem;
   width: 1rem;
+}
+
+.Border-solid {
+  border: solid
+}
+
+.Project-button {
+  width: 80%;
+  min-height: 5rem;
+  font-size: 20px;
+  border-radius: 30px;
+  align-self: center;
+  margin-top: 1rem;
+  background-color: rgb(19, 19, 50);
+  color:rgb(105, 186, 186);
+}
+
+.Margin-bottom {
+  margin-bottom: 4rem;
+}
+
+.No-text-decoration {
+  text-decoration: none;
 }
