--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@
   background-color: rgb(105, 186, 186);
 }
 
+.Lightest-blue {
+  background-color: rgb(181, 228, 228);
+}
+
 .App-body {
   display: flex;
   justify-content: center;
@@ -101,14 +105,27 @@
   min-height: 50px;
 }
 
+.Height-30-fixed {
+  display: flex;
+  min-height: 35rem;
+  max-height: 35rem;
+  margin-top: 1%;
+}
+
+
+.Height-11-fixed {
+  height: 13rem;
+}
+
 .Height-40 {
   /* display: flex; */
   height: 40%;
 }
 
 .Height-20 {
-  /* display: flex; */
+  display: flex;
   height: 20%;
+  width: 50%
 }
 
 .Min-height-75 {
@@ -154,7 +171,7 @@
   max-width: 95vw;
   min-width: 95vw;
   border-radius: 4%;
-  background-color: rgb(181, 228, 228);
+  /* background-color: rgb(181, 228, 228); */
 }
 
 .Width-70 {
@@ -164,6 +181,7 @@
   border-radius: 10%;
   background-color: rgb(181, 228, 228);
 }
+
 
 
 .Width-60 {
@@ -380,7 +398,23 @@ h1 {
   min-height: 2rem;
   border-bottom: solid;
   border-bottom-width: 1px;
-  margin-top: 0.5rem;
+  margin-top: 0.75rem;
+  margin-left: 2%;
+  margin-right: 2%;
+  /* background-color: rgb(181, 228, 228); */
+}
+
+.Inner-query-name-box {
+  font-size: 1.25rem;
+  height: 5rem;
+  margin-bottom: 1%;
+  min-height: 2rem;
+  border-bottom: solid;
+  border-bottom-width: 1px;
+  margin-top: 0.75rem;
+  margin-left: 2%;
+  margin-right: 2%;
+  /* background-color: rgb(181, 228, 228); */
 }
 
 .Smaller-font {
@@ -406,6 +440,7 @@ h1 {
 
 .Border-solid {
   border: solid;
+  border-width: .55px
 }
 
 .Project-button {
@@ -426,4 +461,24 @@ h1 {
 
 .No-text-decoration {
   text-decoration: none;
+}
+
+.effect1 {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.lightest-grey {
+  color: rgb(182, 182, 182);
+
+}
+
+.lighter-background {
+  background-color: rgb(255, 255, 255)
+}
+
+
+.Align-center {
+  margin-left: 30%;
+  margin-right: 30%;
+  margin-top: 5%
 }
