--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 }
 
 .Light-blue {
-  background-color: rgb(105, 186, 186);
+  background-color: #69baba;
 }
 
 .Lightest-blue {
@@ -82,10 +82,11 @@
   flex-direction: row;
   justify-content: center;
   min-height: 5rem;
+  background-color: inherit;
 }
 
 .Height-100 {
-  height:40rem
+  height: 40rem;
 }
 
 .Height-75 {
@@ -112,7 +113,6 @@
   margin-top: 1%;
 }
 
-
 .Height-11-fixed {
   height: 13rem;
 }
@@ -125,7 +125,7 @@
 .Height-20 {
   display: flex;
   height: 20%;
-  width: 50%
+  width: 50%;
 }
 
 .Min-height-75 {
@@ -161,8 +161,8 @@
 }
 
 .Width-100 {
-  margin-left:5%;
-  margin-right:5%;
+  margin-left: 5%;
+  margin-right: 5%;
   width: 90%;
 }
 
@@ -181,8 +181,6 @@
   border-radius: 10%;
   background-color: rgb(181, 228, 228);
 }
-
-
 
 .Width-60 {
   width: 60rem;
@@ -274,7 +272,7 @@ h1 {
 
 .Button {
   align-items: center;
-  /* background-color: grey; */
+  /* background-color: #61dafb; */
   /* color: white; */
   text-align: center;
   text-decoration: none;
@@ -440,7 +438,7 @@ h1 {
 
 .Border-solid {
   border: solid;
-  border-width: .55px
+  border-width: 0.55px;
 }
 
 .Project-button {
@@ -454,7 +452,6 @@ h1 {
   color: rgb(105, 186, 186);
 }
 
-
 .Margin-bottom {
   margin-bottom: 4rem;
 }
@@ -464,21 +461,19 @@ h1 {
 }
 
 .effect1 {
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .lightest-grey {
   color: rgb(182, 182, 182);
-
 }
 
 .lighter-background {
-  background-color: rgb(255, 255, 255)
+  background-color: rgb(255, 255, 255);
 }
-
 
 .Align-center {
   margin-left: 30%;
   margin-right: 30%;
-  margin-top: 5%
+  margin-top: 5%;
 }
