--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  color: #00838f;
   font-family: “Roboto”, sans-serif;
 }
 
@@ -86,7 +85,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  min-height: 5rem;
+  /* min-height: 5rem; */
   background-color: inherit;
 }
 
