--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 }
 
 .Light-blue {
-  background-color: #68b9b9;
+  background-color: rgb(174, 222, 247);
 }
 
 .Lightest-blue {
@@ -34,7 +34,7 @@
 .App-body {
   display: flex;
   justify-content: center;
-  background-color: rgb(181, 228, 228);
+  background-color: rgb(216, 249, 253);
   height: 100vh;
   z-index: -2;
 }
@@ -214,7 +214,7 @@
   max-width: 35rem;
   min-width: 18rem;
   border-radius: 10%;
-  background-color: rgb(181, 228, 228);
+  background-color: rgb(216, 249, 253);
 }
 
 .Width-30 {
@@ -537,7 +537,7 @@ h1 {
 .info-icon {
   height: 2rem;
   width: 2rem;
-  color: navy;
+  color: rgb(35, 35, 96);
 }
 
 #info-icon:hover {
