--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@
   background-color: rgb(219, 250, 250);
   height: 100vh;
   z-index: -2;
+  /* margin-left:15%; */
 }
 
 .App-link {
@@ -300,7 +301,7 @@ h1 {
 
 .Button {
   align-items: center;
-  color: white;
+  color: #ffffff;
   text-align: center;
   text-decoration: none;
   cursor: default;
@@ -489,8 +490,8 @@ h1 {
 }
 
 .Project-button {
-  min-width: 200px;
-  min-height: 150px;
+  width: 200px;
+  height: 100px;
   font-size: 16px;
   align-self: center;
   margin-top: 1rem;
@@ -499,6 +500,10 @@ h1 {
   background-color: rgb(105, 186, 186);
   /* padding: 3%; */
   border-radius: 3%;
+}
+/*  */
+.Margin-left-10 {
+  margin-left: 20%
 }
 
 .Project-text {
